# ChAI

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.testing  README.md  docker-dev-run.md  embed_libtorch.sh  layer_test.chpl  requirements.txt  syntax.tentract  to_run.sh
bridge/: Bridge  CMakeLists.txt  Fix.txt  Makefile  run.sh
bridge/include/: bridge.h  bridge.h.pch
bridge/lib/: Bridge.chpl  CHPLTest.chpl  bridge.cpp
bridge/util/: cvtool.hpp
clib/: Makefile  mylib.c  mylib.h  mylib.h.gch  test.chpl
cmake/: LibTorchDL.cmake  dlcache.cmake
demos/: CMakeLists.txt
demos/models/: readme.md
demos/torchtest/: .gitignore  CMakeLists.txt  buildcmd.md  old_CMakeLists.txt
demos/torchtest_bridge/: CMakeLists.txt  torch_test.cpp
demos/video/: CMakeLists.txt  cvutil.hpp  imageops.hpp  stream.cpp  train.ipynb  webcam_infer.cpp
demos/video/chapel-webcam/: .gitignore  CMakeLists.txt  Makefile  main.c  main.cpp  model.ipynb  model2.ipynb  model3.ipynb  net.cpp  readme.md  smol.chpl  smol_wrapper.h  sobel.pt  transformer_net.hpp  transformer_net.py
demos/video/chapel-webcam/lib/: Makefile.smol  smol.cmake  smol.h
demos/video/cpp-model-construction/: CMakeLists.txt  cam.cpp  model.ipynb  net.cpp  transformer_net.hpp
demos/video/include/: cvtool.hpp
demos/video/style-transfer/: .gitignore  README.md  WORKING.sh  build.sh  cam.py  download_saved_models.py  export_and_run_model.sh  export_model.sh  helpme.txt  libmirror.dylib  mirror.chpl  mirror.cpp  mirror.h  model.ipynb  mprog.c  neural_style.py  neural_style_dev_server_working.py  neural_style_dev_server_working_2.py  run.md  sobel.ipynb  sobel.py  style_transfer.cpp  style_transfer_test.py  utils.py
demos/video/style-transfer/face-recognition/: contract.ipynb  face.py
demos/video/style-transfer/models/: mosaic_float16.pt  my_module.pt  sobel.pt  sobel_edge_float32.pt  sobel_float16.pt  sobel_float32.pt
demos/video/style-transfer/models/exports/cpu/: candy_float16.pt  ckpt_epoch_0_batch_id_18000_float16.pt  ckpt_epoch_0_batch_id_4000_float16.pt  ckpt_epoch_0_batch_id_6000_float16.pt  ckpt_epoch_1_batch_id_20000_float16.pt  mosaic_float16.pt  nature_oil_painting_ep3_bt4_sw3e10_cw_1e5_float16.pt  nature_oil_painting_ep3_bt4_sw5e9_cw_1e5_float16.pt  nature_oil_painting_ep4_bt4_sw1e10_cw_1e5_flash_epoch_1_batch_id_8000_float16.pt  nature_oil_painting_ep4_bt4_sw1e10_cw_1e5_flash_epoch_2_batch_id_16000_float16.pt  nature_oil_painting_ep4_bt4_sw1e10_cw_1e5_flash_epoch_2_batch_id_2000_float16.pt  nature_oil_painting_ep4_bt4_sw1e10_cw_1e5_float16.pt  nature_oil_painting_ep4_bt4_sw1e11_cw_1e5_flash_epoch_2_batch_id_16000_float16.pt  nature_oil_painting_ep4_bt4_sw1e11_cw_1e5_flash_epoch_2_batch_id_2000_float16.pt  nature_oil_painting_ep4_bt4_sw1e11_cw_1e5_float16.pt  nature_oil_painting_ep4_bt4_sw5e9_cw_1e5_flash_epoch_0_batch_id_12000_float16.pt  nature_oil_painting_ep4_bt4_sw5e9_cw_1e5_flash_epoch_0_batch_id_20000_float16.pt  nature_oil_painting_ep4_bt4_sw5e9_cw_1e5_flash_epoch_1_batch_id_8000_float16.pt  rain_princess_float16.pt  starry_ep3_bt4_sw1e11_cw_1e5_float16.pt  starry_h_bt10_1e10_ep5_epoch_2_batch_id_4800_float16.pt  starry_h_bt4_5e11_ep4_epoch_0_batch_id_18000_float16.pt  starry_v_bt4_1e10_ep2_float16.pt  sunday_afternoon_ep3_bt4_sw3e10_cw_1e5_flash_epoch_0_batch_id_12000_float16.pt  sunday_afternoon_ep3_bt4_sw3e10_cw_1e5_flash_epoch_0_batch_id_20000_float16.pt  udnie_float16.pt
demos/video/style-transfer/models/exports/mps/: candy_float16.pt  ckpt_epoch_0_batch_id_18000_float16.pt  ckpt_epoch_0_batch_id_4000_float16.pt  ckpt_epoch_0_batch_id_6000_float16.pt  ckpt_epoch_1_batch_id_20000_float16.pt  mosaic_float16.pt  nature_oil_painting_ep3_bt4_sw3e10_cw_1e5_float16.pt  nature_oil_painting_ep3_bt4_sw5e9_cw_1e5_float16.pt  nature_oil_painting_ep4_bt4_sw1e10_cw_1e5_flash_epoch_1_batch_id_8000_float16.pt  nature_oil_painting_ep4_bt4_sw1e10_cw_1e5_flash_epoch_2_batch_id_16000_float16.pt  nature_oil_painting_ep4_bt4_sw1e10_cw_1e5_flash_epoch_2_batch_id_2000_float16.pt  nature_oil_painting_ep4_bt4_sw1e10_cw_1e5_float16.pt  nature_oil_painting_ep4_bt4_sw1e11_cw_1e5_flash_epoch_2_batch_id_16000_float16.pt  nature_oil_painting_ep4_bt4_sw1e11_cw_1e5_flash_epoch_2_batch_id_2000_float16.pt  nature_oil_painting_ep4_bt4_sw1e11_cw_1e5_float16.pt  nature_oil_painting_ep4_bt4_sw5e9_cw_1e5_flash_epoch_0_batch_id_12000_float16.pt  nature_oil_painting_ep4_bt4_sw5e9_cw_1e5_flash_epoch_0_batch_id_20000_float16.pt  nature_oil_painting_ep4_bt4_sw5e9_cw_1e5_flash_epoch_1_batch_id_8000_float16.pt  rain_princess_float16.pt  starry_ep3_bt4_sw1e11_cw_1e5_float16.pt  starry_h_bt10_1e10_ep5_epoch_2_batch_id_4800_float16.pt  starry_h_bt4_5e11_ep4_epoch_0_batch_id_18000_float16.pt  starry_v_bt4_1e10_ep2_float16.pt  sunday_afternoon_ep3_bt4_sw3e10_cw_1e5_flash_epoch_0_batch_id_12000_float16.pt  sunday_afternoon_ep3_bt4_sw3e10_cw_1e5_flash_epoch_0_batch_id_20000_float16.pt  udnie_float16.pt
demos/webcam_filter/: CMakeLists.txt  WebcamFilter.chpl
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  ConvLayerTest.chpl
examples/cat_breeds/: README.md  cat_breeds.chpl  cat_breeds.py  load_cats.py  nb.ipynb  prepare_cats_data.py  test.py  to_chai.py  utils.py
examples/my_example/: CMakeLists.txt  my_example.chpl
examples/notebooks/: mnist_cnn.ipynb
examples/split_loop/: CMakeLists.txt  split_loop.chpl
examples/torch-tensor-loading/: CMakeLists.txt  mktensor.ipynb  torch_load.chpl
examples/torch_model_loading/: CMakeLists.txt  mktensor.ipynb  torch_load.chpl
examples/torch_model_loading/models/: input.pt  my_tensor.pt  my_tensor_dict.pt
examples/vgg/: README.md  dump_weights.py  mktensor.ipynb  my_tensor.pt  old_vgg.chpl  process_img.py  test.chpl
lib/: Autograd.chpl  Bridge.chpl  DynamicTensor.chpl  Env.chpl  Layer.chpl  LoadNumpy.chpl  NDArray.chpl  Network.chpl  OrderedDict.chpl  StaticTensor.chpl  Tensor.chpl  Utilities.chpl  chai.py  chai_test.ipynb
research/presentation/: models.ipynb
src/: ChAI.chpl
test/: CMakeLists.txt
test/ndarray_addTwoArrays/: CMakeLists.txt  addTwoArraysTest.chpl
(+2453 files in other folders)
