


# READD THESE LATER (START)

# find_package(OpenCV 4 REQUIRED)

# find_library(ACCELERATE Accelerate REQUIRED)
# find_library(METAL Metal REQUIRED)
# find_library(FOUNDATION Foundation REQUIRED)



# add_library(BridgeUtil INTERFACE)

# Tell consumers where to find the headers
# target_include_directories(BridgeUtil
#     INTERFACE               # usage requirement
#         ${CMAKE_CURRENT_SOURCE_DIR}/util
# )


# READD END

# (optional) expose compile options / definitions
# target_compile_features(myheaders INTERFACE cxx_std_20)
# target_compile_definitions(myheaders INTERFACE MYLIB_USE_SOMETHING=1)

# (optional) make an alias so callers can use myproject::myheaders
# add_library(BridgeUtil::myheaders ALIAS myheaders)
